--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,125 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+main {
+    width: 800px;
+    margin: 30px auto;
+    padding: 30px;
+    border: 1px solid #000000;
+}
+
+.border-solid {
+    border: 1px solid #000000;
+    padding: 10px 30px;
+}
+
+
+/* Header */
+
+header {
+    text-align: center;
+}
+
+header h1 {
+    text-transform: uppercase;
+}
+
+.small-header {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+/* Image */
+
+.mooncake-img img {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    flex-grow: 1;
+    justify-content: stretch;
+    align-items: stretch;
+}
+
+.content-wrapper h2, .instructions h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.ingredients h2 {
+    font-size: 1.2rem;
+}
+
+.times {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 8px;
+}
+
+.cook-time {
+    border-left: none;
+    border-right: none;
+}
+
+.prep-time, .total-time, .cook-time {
+    width: 100%;
+    text-align: center;
+}
+
+.times h3, .times p {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    margin: 0;
+}
+
+.carousel-item {
+    padding: 10px 40px;
+    height: 293px;
+}
+
+.carousel-item h3 {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+}
+
+.carousel-item p {
+    margin-bottom: 0;
+}
+
+.carousel-item p span {
+    font-weight: 800;
+}
+
+.list-instructions span {
+    font-weight: 800
+}
+
+footer {
+    margin-top: 8px;
+}
+
+footer p {
+    margin: 0;
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+footer a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: 800;
+}
+
+footer a:hover {
+    color: #000000c0;
+}
