--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,26 @@ main {
     padding: 10px 30px;
 }
 
+/* Nav */
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+}
+
+nav a {
+    color: #000000;
+    text-decoration: none;
+    font-size: clamp(0.3rem, 2,5vw, 0.8rem) !important;
+    font-weight: 800;
+}
+
+nav a:hover {
+    color: #000000b8;
+}
+
 
 /* Header | Top Content */
 
