Add styles to tanghulu and brownie recipe

--- a/mooncake.css
+++ b/mooncake.css
@@ -22,13 +22,14 @@ nav ul {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     gap: 20px;
 }
 
 nav a {
     color: #000000;
     text-decoration: none;
-    font-size: clamp(0.3rem, 2,5vw, 0.8rem) !important;
+    font-size: clamp(0.7rem, 2.5vw, 1rem);
     font-weight: 800;
 }
 
@@ -78,13 +79,13 @@ header p {
     align-items: stretch;
 }
 
+/* Ingredients */
+
 .ingredients-wrapper h2, .instructions h2 {
     text-transform: uppercase;
     text-align: center;
     font-size: clamp(1.1rem, 2.5vw, 1.5rem) ;
 }
-
-/* Ingredients */
 
 .ingredients h2 {
     font-size: clamp(0.9rem, 2.5vw, 1.2rem);
@@ -157,7 +158,7 @@ footer div {
     font-size: clamp(0.6rem, 2.5vw, 0.8rem);
 }
 
-footer a {
+footer a, .book-reference {
     text-decoration: none;
     color: #000000;
     font-weight: 800;
@@ -171,6 +172,10 @@ footer a:hover {
 
     main {
         margin: 30px 30px;
+    }
+
+    nav ul {
+        gap: 5px;
     }
 
     .content {
